# tableFormatter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  collect-docker-logs.cmd  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-ui.cmd  start-docker.cmd
app/: __init__.py  logging.py
app/api/: __init__.py  main.py
app/cli/: __main__.py  inspect_xlsx.py
app/config/: settings.py
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  inn.py  models.py  money.py  products.py  snapshots.py  state.py
app/parsers/: documents.py  eis_text.py
app/review/: __init__.py  sync.py
app/scheduler/: __init__.py  worker.py
app/services/: __init__.py  job_queue.py  processor.py  result_builder.py
app/sheets/: __init__.py  client.py  fake.py  schema.py
app/sources/: __init__.py  base.py  gisp.py
app/sources/eis44/: __init__.py  client.py
app/web/: __init__.py  security.py  views.py
certs/: eis-ca-bundle.pem
docs/: business-rules.md  sheet-schema.md
migrations/: env.py
migrations/versions/: 202607050001_initial.py  202607120001_processing_jobs.py
tests/: test_eis_client.py  test_eis_parser.py  test_gisp.py  test_inn.py  test_money.py  test_processor.py  test_products.py  test_result_builder.py  test_review_sync.py  test_sheet_schema.py  test_snapshots.py  test_state.py  test_web.py
tools/: build_eis_ca_bundle.py  download_wheels.py
